# orca

./: .coverage  .coveragerc  .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  AZURE_OPENAI_SETUP.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  LICENSE  Makefile  PHASE.md  PHASE2_SUMMARY.md  PR_DESCRIPTION.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_v0.3.0-ap2.md  RELEASE_SUMMARY_v0.1.0.md  RULES.md  TASKS.md  ach_limit_sample.json  ach_location_mismatch_sample.json  ach_sample.json  adyen_response.json  audit_report.json  azure_openai_config.txt  basic_sample.json  card_high_ticket_sample.json  card_velocity_sample.json  cart_scenario.json  combined_signals_sample.json  coverage.json  coverage.xml  decision.json  (+15 more)
.artifacts/: batch_results_20250914_202651.csv  batch_results_20250914_210038.csv  batch_results_20250914_210442.csv  batch_results_20250914_210442.json  batch_results_20250914_210631.json  batch_results_20250914_210758.csv  batch_results_20250914_210758.json  batch_results_20250914_211228.csv  batch_results_20250914_211228.json  batch_results_20250914_211336.json  batch_results_20250914_211352.json  batch_results_20250914_211403.json  batch_results_20250914_211518.json  batch_results_20250914_211554.csv  batch_results_20250914_211554.json  batch_results_20250914_211949.csv  batch_results_20250914_211949.json  batch_results_20250914_211950.json  batch_results_20250914_212138.csv  batch_results_20250914_212138.json  batch_results_20250914_212154.csv  batch_results_20250914_212154.json  batch_results_20250914_212214.csv  batch_results_20250914_212214.json  batch_results_20250914_212229.csv  batch_results_20250914_212229.json  batch_results_20250914_212230.json  batch_results_20250914_212244.csv  batch_results_20250914_212244.json  batch_results_20250914_212245.json  batch_results_20250914_212305.csv  batch_results_20250914_212306.json  batch_results_20250914_212508.csv  batch_results_20250914_212508.json  batch_results_20250914_212702.csv  batch_results_20250914_212703.json  batch_results_20250914_233114.json  batch_results_20250914_233115.json  batch_results_20250914_233138.json  batch_results_20250914_233157.json  (+165 more)
.github/: CODEOWNERS  OIDC_SETUP.md  pull_request_template.md
data/: ml_training_data.json
demos/: app.py
docs/: ap2_contract.md  cloudevents_integration.md  cloudevents_reference.md  contract.md  keys.md  migration_guide_ap2.md  observability.md  ocn_common_integration.md  phase2_explainability.md  roadmap.md
examples/: simple_demo.py  simple_server.py  streamlit_demo.py  streamlit_ui.py  web_demo.html
fixtures/: README.md
mcp/: __init__.py  manifest.json  server.py
models/: calibrator.joblib  metadata.json  risk_model.pkl  scaler.joblib  xgb_model.joblib
scripts/: _audit_utils.py  create_ml_model.py  (+17 more)
(+284 files in other folders)
