[project]
name = "orca"
version = "0.1.0"
description = "OCN orca"
readme = "README.md"
requires-python = ">=3.12"
authors = [{name="Ahsan Azmi"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0"
]

[project.optional-dependencies]
dev = ["pytest>=8", "coverage", "ruff", "black", "mypy"]
ocn = ["ocn-common @ git+https://github.com/ocn-ai/ocn-common.git@main"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
disable_error_code = ["assignment", "arg-type", "override"]
