[project]
name = "orca"
version = "0.2.0"
description = "OCN orca"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name="Ahsan Azmi"}]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    "shap>=0.42.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
    "openai>=1.0.0",
    "jsonschema>=4.0.0",
    "typer>=0.9.0",
    "orjson>=3.9.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "streamlit>=1.28.0"
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=4.0.0", "coverage", "ruff", "black", "mypy"]
ocn = ["ocn-common @ git+https://github.com/ocn-ai/ocn-common.git@v0.2.0"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
disable_error_code = ["assignment", "arg-type", "override"]
